--- a/ Udacity Deep_Learning/3_regularization.ipynb
+++ b/ Udacity Deep_Learning/3_regularization.ipynb
@@ -1155,7 +1155,7 @@
     "  logits = tf.matmul(lay2_train, weights3) + biases3\n",
     "  loss = tf.reduce_mean(\n",
     "    tf.nn.softmax_cross_entropy_with_logits(logits, tf_train_labels)) + \\\n",
-    "      beta_regul * (tf.nn.l2_loss(weights1) + tf.nn.l2_loss(weights2) + tf.nn.l2_loss(weights3))\n",
+    "      beta_regulularization_nn * (tf.nn.l2_loss(weights1) + tf.nn.l2_loss(weights2) + tf.nn.l2_loss(weights3))\n",
     "  \n",
     "  # Optimizer.\n",
     "  learning_rate = tf.train.exponential_decay(0.5, global_step, 1000, 0.65, staircase=True)\n",
@@ -1243,13 +1243,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Seem like with more layer and regularization the result is getting better\n",
-    "### Lets try 3 hidden layers with regularization and dropout"
+    "### Seem like with more layers and regularization the result is getting better\n",
+    "### Lets try 3 hidden layers with regularization "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 191,
    "metadata": {
     "collapsed": true
    },
@@ -1272,7 +1272,7 @@
     "  tf_valid_dataset = tf.constant(valid_dataset)\n",
     "  tf_test_dataset = tf.constant(test_dataset)\n",
     "  global_step = tf.Variable(0)\n",
-    "\n",
+    "  beta_regularlization_nn = tf.placeholder(tf.float32)\n",
     "  # Variables.\n",
     "  weights1 = tf.Variable(\n",
     "    tf.truncated_normal(\n",
@@ -1280,12 +1280,17 @@
     "        stddev=np.sqrt(2.0 / (image_size * image_size)))\n",
     "    )\n",
     "  biases1 = tf.Variable(tf.zeros([num_hidden_nodes1]))\n",
+    "  \n",
+    "\n",
     "  weights2 = tf.Variable(\n",
     "    tf.truncated_normal([num_hidden_nodes1, num_hidden_nodes2], stddev=np.sqrt(2.0 / num_hidden_nodes1)))\n",
     "  biases2 = tf.Variable(tf.zeros([num_hidden_nodes2]))\n",
+    "  \n",
     "  weights3 = tf.Variable(\n",
     "    tf.truncated_normal([num_hidden_nodes2, num_hidden_nodes3], stddev=np.sqrt(2.0 / num_hidden_nodes2)))\n",
     "  biases3 = tf.Variable(tf.zeros([num_hidden_nodes3]))\n",
+    "  \n",
+    "\n",
     "  weights4 = tf.Variable(\n",
     "    tf.truncated_normal([num_hidden_nodes3, num_labels], stddev=np.sqrt(2.0 / num_hidden_nodes3)))\n",
     "  biases4 = tf.Variable(tf.zeros([num_labels]))\n",
@@ -1296,7 +1301,8 @@
     "  lay3_train = tf.nn.relu(tf.matmul(lay2_train, weights3) + biases3)\n",
     "  logits = tf.matmul(lay3_train, weights4) + biases4\n",
     "  loss = tf.reduce_mean(\n",
-    "    tf.nn.softmax_cross_entropy_with_logits(logits, tf_train_labels))\n",
+    "    tf.nn.softmax_cross_entropy_with_logits(logits, tf_train_labels))+\\\n",
+    "      beta_regularlization_nn * (tf.nn.l2_loss(weights1) + tf.nn.l2_loss(weights2) + tf.nn.l2_loss(weights3)+ tf.nn.l2_loss(weights4))\n",
     "  \n",
     "  # Optimizer.\n",
     "  learning_rate = tf.train.exponential_decay(0.5, global_step, 4000, 0.65, staircase=True)\n",
@@ -1316,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 183,
    "metadata": {
     "collapsed": false
    },
@@ -1326,42 +1332,45 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0 : 3.30475\n",
-      "Minibatch accuracy: 7.8%\n",
-      "Validation accuracy: 41.4%\n",
-      "Minibatch loss at step 1000 : 0.857891\n",
-      "Minibatch accuracy: 85.2%\n",
-      "Validation accuracy: 86.7%\n",
-      "Minibatch loss at step 2000 : 0.509513\n",
-      "Minibatch accuracy: 94.5%\n",
-      "Validation accuracy: 88.0%\n",
-      "Minibatch loss at step 3000 : 0.559869\n",
-      "Minibatch accuracy: 89.1%\n",
-      "Validation accuracy: 88.5%\n",
-      "Minibatch loss at step 4000 : 0.455926\n",
-      "Minibatch accuracy: 91.4%\n",
-      "Validation accuracy: 89.1%\n",
-      "Minibatch loss at step 5000 : 0.510399\n",
+      "Minibatch loss at step 0 : 3.42702\n",
+      "Minibatch accuracy: 16.4%\n",
+      "Validation accuracy: 37.2%\n",
+      "Minibatch loss at step 2000 : 0.540107\n",
+      "Minibatch accuracy: 92.2%\n",
+      "Validation accuracy: 87.7%\n",
+      "Minibatch loss at step 4000 : 0.437594\n",
+      "Minibatch accuracy: 93.0%\n",
+      "Validation accuracy: 88.4%\n",
+      "Minibatch loss at step 6000 : 0.587153\n",
+      "Minibatch accuracy: 85.9%\n",
+      "Validation accuracy: 88.8%\n",
+      "Minibatch loss at step 8000 : 0.644813\n",
+      "Minibatch accuracy: 82.8%\n",
+      "Validation accuracy: 89.0%\n",
+      "Minibatch loss at step 10000 : 0.428871\n",
       "Minibatch accuracy: 89.8%\n",
       "Validation accuracy: 89.7%\n",
-      "Minibatch loss at step 6000 : 0.569236\n",
-      "Minibatch accuracy: 88.3%\n",
-      "Validation accuracy: 89.6%\n",
-      "Minibatch loss at step 7000 : 0.531928\n",
-      "Minibatch accuracy: 89.1%\n",
-      "Validation accuracy: 89.7%\n",
-      "Minibatch loss at step 8000 : 0.577329\n",
-      "Minibatch accuracy: 85.2%\n",
+      "Minibatch loss at step 12000 : 0.473604\n",
+      "Minibatch accuracy: 89.8%\n",
       "Validation accuracy: 89.9%\n",
-      "Minibatch loss at step 9000 : 0.468999\n",
-      "Minibatch accuracy: 90.6%\n",
-      "Validation accuracy: 90.0%\n",
-      "Test accuracy: 95.8%\n"
+      "Minibatch loss at step 14000 : 0.421187\n",
+      "Minibatch accuracy: 92.2%\n",
+      "Validation accuracy: 90.6%\n",
+      "Minibatch loss at step 16000 : 0.35204\n",
+      "Minibatch accuracy: 93.8%\n",
+      "Validation accuracy: 90.3%\n",
+      "Minibatch loss at step 18000 : 0.311133\n",
+      "Minibatch accuracy: 95.3%\n",
+      "Validation accuracy: 90.5%\n",
+      "Minibatch loss at step 20000 : 0.443139\n",
+      "Minibatch accuracy: 89.8%\n",
+      "Validation accuracy: 90.7%\n",
+      "Test accuracy: 95.9%\n"
      ]
     }
    ],
    "source": [
-    "num_steps = 10000\n",
+    "num_steps = 20001\n",
     "training_accuracy = []\n",
     "validation_accuracy = []\n",
     "\n",
@@ -1381,7 +1390,7 @@
     "    feed_dict = {tf_train_dataset : batch_data, tf_train_labels : batch_labels, beta_regularlization_nn : 1e-3}\n",
     "    _, l, predictions = session.run(\n",
     "      [optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
-    "    if (step % 1000 == 0):\n",
+    "    if (step % 2000 == 0):\n",
     "      print(\"Minibatch loss at step\", step, \":\", l)\n",
     "      print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
     "      print(\"Validation accuracy: %.1f%%\" % accuracy(\n",
@@ -1389,6 +1398,192 @@
     "      training_accuracy.append(accuracy(predictions, batch_labels))\n",
     "      validation_accuracy.append(accuracy(valid_prediction.eval(), valid_labels))\n",
     "  print(\"Test accuracy: %.1f%%\" % accuracy(test_prediction.eval(), test_labels))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Trying four layers with regularization "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "batch_size = 128\n",
+    "num_hidden_nodes1 = 1024\n",
+    "num_hidden_nodes2 = 256\n",
+    "num_hidden_nodes3 = 128\n",
+    "num_hidden_nodes4 = 64\n",
+    "keep_prob = 0.5\n",
+    "\n",
+    "graph = tf.Graph()\n",
+    "with graph.as_default():\n",
+    "\n",
+    "  # Input data. For the training data, we use a placeholder that will be fed\n",
+    "  # at run time with a training minibatch.\n",
+    "  tf_train_dataset = tf.placeholder(tf.float32,\n",
+    "                                    shape=(batch_size, image_size * image_size))\n",
+    "  tf_train_labels = tf.placeholder(tf.float32, shape=(batch_size, num_labels))\n",
+    "  tf_valid_dataset = tf.constant(valid_dataset)\n",
+    "  tf_test_dataset = tf.constant(test_dataset)\n",
+    "  global_step = tf.Variable(0)\n",
+    "  beta_regularlization_nn = tf.placeholder(tf.float32)\n",
+    "\n",
+    "\n",
+    "  # Variables.\n",
+    "  weights1 = tf.Variable(\n",
+    "    tf.truncated_normal(\n",
+    "        [image_size * image_size, num_hidden_nodes1],\n",
+    "        stddev=np.sqrt(2.0 / (image_size * image_size)))\n",
+    "    )\n",
+    "  biases1 = tf.Variable(tf.zeros([num_hidden_nodes1]))\n",
+    "  \n",
+    "\n",
+    "  weights2 = tf.Variable(\n",
+    "    tf.truncated_normal([num_hidden_nodes1, num_hidden_nodes2], stddev=np.sqrt(2.0 / num_hidden_nodes1)))\n",
+    "  biases2 = tf.Variable(tf.zeros([num_hidden_nodes2]))\n",
+    "  \n",
+    "  weights3 = tf.Variable(\n",
+    "    tf.truncated_normal([num_hidden_nodes2, num_hidden_nodes3], stddev=np.sqrt(2.0 / num_hidden_nodes2)))\n",
+    "  biases3 = tf.Variable(tf.zeros([num_hidden_nodes3]))\n",
+    "  \n",
+    "  \n",
+    "\n",
+    "  weights4 = tf.Variable(\n",
+    "    tf.truncated_normal([num_hidden_nodes3, num_hidden_nodes4], stddev=np.sqrt(2.0 / num_hidden_nodes3)))\n",
+    "  biases4 = tf.Variable(tf.zeros([num_hidden_nodes4]))\n",
+    "    \n",
+    "  weights5 = tf.Variable(\n",
+    "    tf.truncated_normal([num_hidden_nodes4, num_labels], stddev=np.sqrt(2.0 / num_hidden_nodes4)))\n",
+    "  biases5 = tf.Variable(tf.zeros([num_labels]))\n",
+    "    \n",
+    "  \n",
+    "  # Training computation.\n",
+    "  lay1_train = tf.nn.relu(tf.matmul(tf_train_dataset, weights1) + biases1)\n",
+    "  lay2_train = tf.nn.relu(tf.matmul(lay1_train, weights2) + biases2)\n",
+    "  lay3_train = tf.nn.relu(tf.matmul(lay2_train, weights3) + biases3)\n",
+    "  lay4_train = tf.nn.relu(tf.matmul(lay3_train, weights4) + biases4)\n",
+    "  logits = tf.matmul(lay4_train, weights5) + biases5\n",
+    "  \n",
+    "  loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits, tf_train_labels))+\\\n",
+    "      beta_regularlization_nn * (tf.nn.l2_loss(weights1) + tf.nn.l2_loss(weights2) + tf.nn.l2_loss(weights3)+ tf.nn.l2_loss(weights4) + tf.nn.l2_loss(weights5))\n",
+    "  \n",
+    "  # Optimizer.\n",
+    "  learning_rate = tf.train.exponential_decay(0.5, global_step, 4000, 0.65, staircase=True)\n",
+    "  optimizer = tf.train.GradientDescentOptimizer(learning_rate).minimize(loss, global_step=global_step)\n",
+    "  \n",
+    "  # Predictions for the training, validation, and test data.\n",
+    "  train_prediction = tf.nn.softmax(logits)\n",
+    "  \n",
+    "    \n",
+    "  lay1_valid = tf.nn.relu(tf.matmul(tf_valid_dataset, weights1) + biases1)\n",
+    "  lay2_valid = tf.nn.relu(tf.matmul(lay1_valid, weights2) + biases2)\n",
+    "  lay3_valid = tf.nn.relu(tf.matmul(lay2_valid, weights3) + biases3)\n",
+    "  lay4_valid = tf.nn.relu(tf.matmul(lay3_valid, weights4) + biases4)\n",
+    "  valid_prediction = tf.nn.softmax(tf.matmul(lay4_valid, weights5) + biases5)\n",
+    "  \n",
+    "\n",
+    "  lay1_test = tf.nn.relu(tf.matmul(tf_test_dataset, weights1) + biases1)\n",
+    "  lay2_test = tf.nn.relu(tf.matmul(lay1_test, weights2) + biases2)\n",
+    "  lay3_test = tf.nn.relu(tf.matmul(lay2_test, weights3) + biases3)\n",
+    "  lay4_test = tf.nn.relu(tf.matmul(lay3_test, weights4) + biases4)\n",
+    "  test_prediction = tf.nn.softmax(tf.matmul(lay4_test, weights5) + biases5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialized\n",
+      "Minibatch loss at step 0 : 3.55934\n",
+      "Minibatch accuracy: 11.7%\n",
+      "Validation accuracy: 20.6%\n",
+      "Minibatch loss at step 2000 : 0.539295\n",
+      "Minibatch accuracy: 91.4%\n",
+      "Validation accuracy: 87.8%\n",
+      "Minibatch loss at step 4000 : 0.47813\n",
+      "Minibatch accuracy: 90.6%\n",
+      "Validation accuracy: 88.1%\n",
+      "Minibatch loss at step 6000 : 0.61889\n",
+      "Minibatch accuracy: 85.9%\n",
+      "Validation accuracy: 88.3%\n",
+      "Minibatch loss at step 8000 : 0.611202\n",
+      "Minibatch accuracy: 85.9%\n",
+      "Validation accuracy: 88.8%\n",
+      "Minibatch loss at step 10000 : 0.422707\n",
+      "Minibatch accuracy: 90.6%\n",
+      "Validation accuracy: 89.6%\n",
+      "Minibatch loss at step 12000 : 0.483692\n",
+      "Minibatch accuracy: 89.8%\n",
+      "Validation accuracy: 89.8%\n",
+      "Minibatch loss at step 14000 : 0.412324\n",
+      "Minibatch accuracy: 93.0%\n",
+      "Validation accuracy: 90.3%\n",
+      "Minibatch loss at step 16000 : 0.339105\n",
+      "Minibatch accuracy: 95.3%\n",
+      "Validation accuracy: 90.4%\n",
+      "Minibatch loss at step 18000 : 0.317888\n",
+      "Minibatch accuracy: 96.1%\n",
+      "Validation accuracy: 90.7%\n",
+      "Minibatch loss at step 20000 : 0.417661\n",
+      "Minibatch accuracy: 90.6%\n",
+      "Validation accuracy: 90.4%\n",
+      "Test accuracy: 95.8%\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_steps = 20001\n",
+    "training_accuracy = []\n",
+    "validation_accuracy = []\n",
+    "\n",
+    "with tf.Session(graph=graph) as session:\n",
+    "  tf.initialize_all_variables().run()\n",
+    "  print(\"Initialized\")\n",
+    "  for step in xrange(num_steps):\n",
+    "    # Pick an offset within the training data, which has been randomized.\n",
+    "    # Note: we could use better randomization across epochs.\n",
+    "    offset = (step * batch_size) % (train_labels.shape[0] - batch_size)\n",
+    "    # Generate a minibatch.\n",
+    "    batch_data = train_dataset[offset:(offset + batch_size), :]\n",
+    "    batch_labels = train_labels[offset:(offset + batch_size), :]\n",
+    "    # Prepare a dictionary telling the session where to feed the minibatch.\n",
+    "    # The key of the dictionary is the placeholder node of the graph to be fed,\n",
+    "    # and the value is the numpy array to feed to it.\n",
+    "    feed_dict = {tf_train_dataset : batch_data, tf_train_labels : batch_labels, beta_regularlization_nn : 1e-3}\n",
+    "    _, l, predictions = session.run(\n",
+    "      [optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
+    "    \n",
+    "    if (step % 2000 == 0):\n",
+    "        \n",
+    "      print(\"Minibatch loss at step\", step, \":\", l)\n",
+    "      print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
+    "      print(\"Validation accuracy: %.1f%%\" % accuracy(valid_prediction.eval(), valid_labels))\n",
+    "    \n",
+    "      training_accuracy.append(accuracy(predictions, batch_labels))\n",
+    "      validation_accuracy.append(accuracy(valid_prediction.eval(), valid_labels))\n",
+    "    \n",
+    "  print(\"Test accuracy: %.1f%%\" % accuracy(test_prediction.eval(), test_labels))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The best test accuracy I could achieve so far is 95.9% by using 3 layers and regularization.\n"
    ]
   },
   {
